--- a/style.css
+++ b/style.css
@@ -8,8 +8,20 @@ body {
   background-color: white;
 }
 
+.no-gutters {
+  margin: 0;
+  padding: 0;
+}
+
+.no-gutters > .col,
+.no-gutters > [class*="col-"] {
+  margin: 0;
+  padding: 0;
+}
+
 .unity-content {
-  height: 80vh;
+  width: 100%;
+  height: 90vh;
 }
 
 #unity {
